--- a/HW3-1/HW3-1.csproj
+++ b/HW3-1/HW3-1.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>HW3_1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
+  </ItemGroup>
+
 </Project>
