--- a/HW4-1/HW4-1.csproj
+++ b/HW4-1/HW4-1.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>HW4_1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
+  </ItemGroup>
+
 </Project>
